<resources>
    <string name="app_name">RecipeApp</string>
    <string name="k_premium_r">100K+ Premium Recipe</string>
    <string name="lbl_start_cooking">Start Cooking</string>
    <string name="header_title">Get\nCooking</string>
    <string name="caption">Simple way to find Tasty Recipe</string>
    <string name="hello_">Hello,</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or_sign_in_">Or Sign in With</string>
    <string name="don_t_have_">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_a">Create an account</string>
    <string name="let_s_help_">Let’s help you set up your account,\nit won’t take long.</string>
    <string name="hello_jega">Hello Jega</string>
    <string name="what_are_yo">What are you cooking today?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_popular_chef">PopularChefActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_chefs">ChefsActivity</string>
    <string name="title_activity_popular_chefs">PopularChefsActivity</string>

</resources>