<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="30dp"
    android:paddingEnd="30dp"
    tools:context=".activities.SignInActivity">

    <TextView
        android:id="@+id/txt_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:lineHeight="@dimen/_45sdp"
        android:text="@string/hello_"
        android:textColor="@color/black"
        android:textSize="@dimen/_30ssp" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome_back"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_20ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/lbl_email"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_edit_text_cut"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="Enter Email"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/lbl_enter_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_edit_text_cut"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_pass"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/forgot_pass"
        android:textSize="@dimen/_11ssp" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/medium_butt"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:paddingStart="70dp"
        android:paddingEnd="90dp"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_centerInParent="true"
            android:background="#D9D9D9" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/or_sign_in_"
            android:textSize="@dimen/_11ssp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="18dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/google_btn"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_socialicons"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_google" />

        <ImageButton
            android:id="@+id/facebook_btn"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_socialicons"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_facebook" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/don_t_have_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/don_t_have_" />

        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@id/don_t_have_"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up"
            android:textColor="#FF9C00"
            android:textSize="@dimen/_11ssp" />
    </RelativeLayout>


</LinearLayout>