<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_start"
    tools:context=".activities.StartCookingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_app" />

        <TextView
            android:id="@+id/k_premium_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:text="@string/k_premium_r"
            android:textAppearance="@style/k_premium_r" />
    </LinearLayout>

    <Button
        android:id="@+id/medium_butt"
        android:layout_width="243dp"
        android:layout_height="54dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/medium_butt"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:paddingEnd="37dp"
        android:paddingStart="20dp"
        android:text="@string/lbl_start_cooking"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/medium_butt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_horizontal|top"
            android:lineHeight="@dimen/_60ssp"
            android:lineSpacingExtra="-15sp"
            android:text="@string/header_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_50ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal|top"
            android:text="@string/caption"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>